# printf_supertest

./: .gitignore  INSTALL  Makefile.am  README  a.txt  config.h.in  configure.ac  printer.c  set_printf_path.sh  test.c  test.h
