# **************************************************************************** #
#                                                                              #
#                                                         ::::::::             #
#    Makefile.am                                        :+:    :+:             #
#                                                      +:+                     #
#    By: tjans <tjans@student.codam.nl>               +#+                      #
#                                                    +#+                       #
#    Created: 2019/12/02 21:16:07 by tjans         #+#    #+#                  #
#    Updated: 2019/12/02 21:24:52 by tjans         ########   odam.nl          #
#                                                                              #
# **************************************************************************** #

bin_PROGRAMS = printer_std

printer_std_SOURCES = printer.c

dist_doc_DATA = README
