# **************************************************************************** #
#                                                                              #
#                                                         ::::::::             #
#    configure.ac                                       :+:    :+:             #
#                                                      +:+                     #
#    By: tjans <tjans@student.codam.nl>               +#+                      #
#                                                    +#+                       #
#    Created: 2019/12/02 20:27:53 by tjans         #+#    #+#                  #
#    Updated: 2019/12/02 21:11:34 by tjans         ########   odam.nl          #
#                                                                              #
# **************************************************************************** #

AC_PREREQ([2.69])
AC_INIT([printf_supertest], [20191202])
AC_CONFIG_SRCDIR([printer.c])
AC_CHECK_LIB([ft], [ft_strlen])
AC_CHECK_LIB([ftprintf], [ft_printf])
AC_PROG_CC
AC_PROG_MAKE_SET
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
